# nativeheap

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/netease/cloudmusic/nativeheap/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/netease/cloudmusic/nativeheap/: LargeObjectTest.kt  MainActivity.kt  SmallObjectTest.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
nativeheap-core/: build.gradle
nativeheap-core/src/androidTest/java/com/netease/cloudmusic/nativeheap/: ExampleInstrumentedTest.kt
nativeheap-core/src/main/cpp/: CMakeLists.txt  arthandler.c  arthandler.h
nativeheap-core/src/main/java/com/netease/cloudmusic/nativeheap/: NativeHeapManager.kt
nativeheap-core/src/main/res/values/: strings.xml  themes.xml
nativeheap-core/src/test/java/com/netease/cloudmusic/nativeheap/: ExampleUnitTest.kt
